# rocprofiler-sdk

./: .readthedocs.yaml  README.md
.github/workflows/: continuous_integration.yml
cmake/: rocprofiler_config_packaging.cmake
source/docs/: _toc.yml.in
source/docs/api-reference/: counter_collection_services.md
source/docs/how-to/: using-rocprofv3.rst
source/docs/install/: installation.md
source/docs/sphinx/: requirements.txt
source/include/rocprofiler-sdk/: CMakeLists.txt  rocprofiler.h
source/include/rocprofiler-sdk-roctx/: CMakeLists.txt
source/include/rocprofiler-sdk/amd_detail/: CMakeLists.txt
source/include/rocprofiler-sdk/cxx/: CMakeLists.txt
source/include/rocprofiler-sdk/cxx/codeobj/: CMakeLists.txt
source/include/rocprofiler-sdk/experimental/: CMakeLists.txt
source/include/rocprofiler-sdk/hip/: CMakeLists.txt
source/include/rocprofiler-sdk/hsa/: CMakeLists.txt
source/include/rocprofiler-sdk/kfd/: CMakeLists.txt
source/include/rocprofiler-sdk/marker/: CMakeLists.txt
source/include/rocprofiler-sdk/rccl/: CMakeLists.txt
source/lib/common/: static_object.hpp
source/lib/rocprofiler-sdk-tool/: CMakeLists.txt  domain_type.hpp  helper.hpp
source/lib/rocprofiler-sdk-tool/kokkosp/: CMakeLists.txt
source/lib/rocprofiler-sdk/counters/: controller.cpp
source/lib/rocprofiler-sdk/counters/xml/: CMakeLists.txt
source/lib/rocprofiler-sdk/hsa/: queue.cpp
source/lib/rocprofiler-sdk/thread_trace/: att_core.hpp
source/libexec/rocprofiler-avail/: CMakeLists.txt
source/sbin/: CMakeLists.txt
tests/rocprofv3/kernel-rename/: validate.py
(+5 files in other folders)
